# ecommerce-api

./: .gitignore  =  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt
ecommerceapi/: conftest.py  settings.py  urls.py
ecommerceapi/billings/: exceptions.py  urls.py  utils.py  views.py
ecommerceapi/billings/controllers/: __init__.py  order_controller.py
ecommerceapi/billings/migrations/: 0001_initial.py  0002_auto_20210321_0240.py  0002_auto_20210404_2353.py  0003_auto_20210405_0054.py  0004_order_paid.py  0005_auto_20210407_0021.py  0006_remove_order_correios_code.py  0007_cob.py  0008_auto_20230615_1743.py
ecommerceapi/billings/models/: __init__.py  car.py  cob.py  order.py
ecommerceapi/billings/serializers/: __init__.py  billings_serializer.py
ecommerceapi/core/: exceptions.py  facade.py  urls.py  views.py
ecommerceapi/core/commons/: __init__.py
ecommerceapi/core/migrations/: 0001_initial.py  0002_auto_20210304_2237.py  0002_product_provider.py  0003_auto_20210304_2239.py  0004_auto_20210305_2122.py  0005_auto_20210305_2123.py  0006_product_provider.py
ecommerceapi/core/models/: __init__.py  domain.py  product.py
ecommerceapi/core/serializers/: __init__.py  product_serializer.py
ecommerceapi/core/tests/: __init__.py  test_csv_files.py  test_domain.py  test_dummie.py  test_product.py
ecommerceapi/providers/: exceptions.py  facade.py  urls.py  views.py
ecommerceapi/providers/ProviderHooks/: GiantBombProvider.py  __init__.py
ecommerceapi/providers/migrations/: 0001_initial.py  0002_provider_domains.py
(+3 files in other folders)
