[tool.poetry]
name = "ecommerce-api"
version = "0.1.0"
description = ""
authors = ["Victor"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
python-decouple = "^3.4"
djangorestframework = "^3.12.2"
dj-database-url = "^0.5.0"
black = "^20.8b1"
psycopg2-binary = "^2.8.6"
pytest-django = "^4.1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
